--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/app.js"
+    "start": "RMDIR dist /S /Q && tsc && copyfiles ./assets/configuration.json ./dist && node ./dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/likefurnis/Prueba#readme",
   "dependencies": {
+    "@types/node": "^14.14.22",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1"
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
+    "copyfiles": "^2.4.1",
     "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
