--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "interview",
+  "name": "node-coupons-generator",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/likefurnis/Prueba.git"
+    "url": "git+https://github.com/likefurnis/node-coupons-generator.git"
   },
   "author": "Gummie",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/likefurnis/Prueba/issues"
+    "url": "https://github.com/likefurnis/node-coupons-generator/issues"
   },
-  "homepage": "https://github.com/likefurnis/Prueba#readme",
+  "homepage": "https://github.com/likefurnis/node-coupons-generator#readme",
   "dependencies": {
     "@types/node": "^14.14.22",
     "cors": "^2.8.5",
