--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "source-map-support": "^0.5.19",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
