--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@types/node": "^14.14.22",
     "cors": "^2.8.5",
     "debug": "^4.3.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.1.3",
+    "copyfiles": "^2.4.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.9",
@@ -29,13 +31,11 @@
     "@types/express": "^4.17.11",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
-    "copyfiles": "^2.4.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "source-map-support": "^0.5.19",
-    "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "tslint": "^6.1.3"
   },
   "engines": {
     "node": "14.x"
