--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "typescript": "^4.1.3",
-    "copyfiles": "^2.4.1"
-  },
-  "devDependencies": {
+    "copyfiles": "^2.4.1",
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
