--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "rmdist": "RMDIR dist /S /Q",
-    "start": "cd src && tsc && cd .. && copyfiles ./assets/configuration.json ./dist && node ./dist/app.js"
+    "clean": "rimraf dist/",
+    "compile": "cd src && tsc && cd ..",
+    "copy-files": "copyfiles assets/configuration.json dist",
+    "start": "npm run clean && npm run compile && npm run copy-files && node ./dist/app.js"
   },
   "repository": {
     "type": "git",
@@ -18,22 +20,23 @@
   },
   "homepage": "https://github.com/likefurnis/node-coupons-generator#readme",
   "dependencies": {
-    "@types/node": "^14.14.22",
-    "cors": "^2.8.5",
-    "debug": "^4.3.1",
-    "express": "^4.17.1",
-    "typescript": "^4.1.3",
-    "copyfiles": "^2.4.1",
     "@types/cors": "^2.8.9",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "copyfiles": "^2.4.1",
+    "cors": "^2.8.5",
+    "debug": "^4.3.1",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "express": "^4.17.1",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.19",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.3"
   },
   "engines": {
     "node": "14.x",
